ammended output and notebook

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 66,
    "id": "e99a7e11-41b0-4df0-82c6-6532548be2a5",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 67,
    "id": "393a76c2-655d-499f-a2f6-b012db6d1209",
    "metadata": {},
    "outputs": [
@@ -68,14 +68,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 68,
    "id": "2b21abd9-403b-4f2b-95cc-c92807fc341b",
    "metadata": {},
    "outputs": [],
    "source": [
     "# For posterity and a possible performance improvement when reading csv\n",
     "blight_column_dtype = { 'X': float, 'Y': float, 'violation_address': str }\n",
-    "property_column_dtype = { 'X': float, 'Y': float, 'address': str }\n",
+    "property_column_dtype = { 'X': float, 'Y': float, 'address': str, 'grantee': str }\n",
     "\n",
     "# Read both datasets into dataframes\n",
     "blight_violations_df = pd.read_csv('./data/Blight_Violations.csv', low_memory=False, dtype=blight_column_dtype)\n",
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 69,
    "id": "8210b22b-f5f0-4b82-ae3c-7b8acdf3f8a3",
    "metadata": {},
    "outputs": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 70,
    "id": "bb85d6dc-597d-4dcb-bad0-303074cc2a64",
    "metadata": {},
    "outputs": [
@@ -221,12 +221,12 @@
       "2 -83.115057  42.359928     4066 COLUMBUS\n",
       "3 -83.128037  42.393455     3005 PASADENA\n",
       "4 -83.134466  42.389668     4024 CLEMENTS\n",
-      "           X          Y            address\n",
-      "0 -83.224446  42.388139  14006 GLASTONBURY\n",
-      "1 -83.210323  42.438587  19951 ASBURY PARK\n",
-      "2 -83.209319  42.415134  16881 ASBURY PARK\n",
-      "3 -83.161543  42.351916      10322 TIREMAN\n",
-      "4 -83.074014  42.346942       4158 LINCOLN\n"
+      "           X          Y            address                   grantee\n",
+      "0 -83.224446  42.388139  14006 GLASTONBURY        NEWBERRY, TARSHISH\n",
+      "1 -83.210323  42.438587  19951 ASBURY PARK              REAL TC LLC \n",
+      "2 -83.209319  42.415134  16881 ASBURY PARK  MCQUEEN, WILLIE & BESSIE\n",
+      "3 -83.161543  42.351916      10322 TIREMAN                H.I.G. LLC\n",
+      "4 -83.074014  42.346942       4158 LINCOLN                CRUSE, ZAC\n"
      ]
     }
    ],
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 71,
    "id": "36fb7994-b3b0-40ad-a528-d6c638781f86",
    "metadata": {},
    "outputs": [],
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 127,
    "id": "9500ae22-4da8-4ab5-a73a-66d331dfd74c",
    "metadata": {},
    "outputs": [
@@ -278,7 +278,25 @@
       "1 -83.072474  42.383400          607 KING\n",
       "2 -83.115057  42.359928     4066 COLUMBUS\n",
       "3 -83.128037  42.393455     3005 PASADENA\n",
-      "4 -83.134466  42.389668     4024 CLEMENTS\n",
+      "4 -83.134466  42.389668     4024 CLEMENTS\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-02-09 18:15:44,492\tINFO\tProcessed 1000 items\n",
+      "2024-02-09 18:15:45,003\tINFO\tProcessed 1001 items\n",
+      "2024-02-09 18:15:45,004\tINFO\tDone\n",
+      "2024-02-09 18:16:15,141\tINFO\tProcessed 1000 items\n",
+      "2024-02-09 18:16:15,538\tINFO\tProcessed 1001 items\n",
+      "2024-02-09 18:16:15,539\tINFO\tDone\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "BLIGHT:  1001 PROPERTY:  1001\n"
      ]
     }
@@ -293,6 +311,7 @@
     "\n",
     "    # Setting default region and country code (we assume Michigan and US for this particular dataset)\n",
     "    df['region'] = 'MI'\n",
+    "    df['city'] = 'Detroit'\n",
     "    df['iso_country_code'] = 'US'\n",
     "\n",
     "    # We need to convert query_id to string to conform with Placekey's API docs\n",
@@ -306,14 +325,14 @@
     "blight_violations_json = df_to_api_query(df=blight_violations_df, \\\n",
     "                                         column_map={'index': 'query_id', 'violation_address': 'street_address', 'X': 'longitude', 'Y': 'latitude'})\n",
     "property_sales_json = df_to_api_query(df=property_sales_df, \\\n",
-    "                                      column_map={'index': 'query_id', 'address': 'street_address', 'X': 'longitude', 'Y': 'latitude'})\n",
+    "                                      column_map={'index': 'query_id', 'address': 'street_address', 'X': 'longitude', 'Y': 'latitude', 'grantee': 'location_name'})\n",
     "\n",
     "# Let's check our work\n",
     "print(blight_violations_df.head())\n",
     "\n",
     "# Finally, let's make this API call\n",
-    "blight_response = pk_api.lookup_placekeys(blight_violations_json)\n",
-    "property_response = pk_api.lookup_placekeys(property_sales_json)\n",
+    "blight_response = pk_api.lookup_placekeys(blight_violations_json, verbose=True)\n",
+    "property_response = pk_api.lookup_placekeys(property_sales_json, verbose=True)\n",
     "\n",
     "\n",
     "print('BLIGHT: ', len(blight_response), 'PROPERTY: ', len(property_response))"
@@ -337,10 +356,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 143,
    "id": "b5e67a1c-83ea-4782-90d3-1d4b35fdf1d5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/02/g7r1b8rd479dg621r14hxq400000gn/T/ipykernel_34016/365233284.py:2: FutureWarning: Passing literal json to 'read_json' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
+      "  blight_pk_df = pd.read_json(json.dumps(blight_response), dtype={'query_id': str})\n",
+      "/var/folders/02/g7r1b8rd479dg621r14hxq400000gn/T/ipykernel_34016/365233284.py:3: FutureWarning: Passing literal json to 'read_json' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
+      "  property_pk_df = pd.read_json(json.dumps(property_response), dtype={'query_id': str})\n"
+     ]
+    }
+   ],
    "source": [
     "# Now we can convert the API response to a dataframe\n",
     "blight_pk_df = pd.read_json(json.dumps(blight_response), dtype={'query_id': str})\n",
@@ -352,18 +382,90 @@
     "    org_df['index'] = org_df['index'].astype(str)\n",
     "    \n",
     "    with_pk_df = pd.merge(org_df, pk_df, left_on=\"index\", right_on=\"query_id\", how='left')\n",
-    "    with_pk_df = with_pk_df.drop('error', axis=1)\n",
     "\n",
     "    return with_pk_df\n",
     "\n",
     "blight_pk_merged = merge_placekey_with_df(blight_pk_df, blight_violations_df)\n",
-    "property_pk_merged = merge_placekey_with_df(property_pk_df, property_sales_df)\n",
+    "property_pk_merged = merge_placekey_with_df(property_pk_df, property_sales_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "id": "b9f11018-6cba-4ea7-9d87-61ff2eb2974b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      where_pk_7  violations_within_1100_meters index          X          Y  \\\n",
+      "0     @63v-4jp-g                            NaN     0 -83.224446  42.388139   \n",
+      "1     @63v-456-h                            NaN     1 -83.210323  42.438587   \n",
+      "2     @63v-458-g                            3.0     2 -83.209319  42.415134   \n",
+      "3     @63v-4jh-8                            NaN     3 -83.161543  42.351916   \n",
+      "4     @63v-48v-3                            1.0     4 -83.074014  42.346942   \n",
+      "...          ...                            ...   ...        ...        ...   \n",
+      "996   @63v-4gb-f                            NaN   996        NaN        NaN   \n",
+      "997   @63v-44h-d                            NaN   997 -83.086941  42.434075   \n",
+      "998   @63v-4gc-m                            1.0   998 -83.234435  42.361752   \n",
+      "999   @63v-4b4-r                            NaN   999 -83.027276  42.439680   \n",
+      "1000  @63v-455-n                            1.0  1000 -83.159045  42.429704   \n",
+      "\n",
+      "                address                   grantee query_id  \\\n",
+      "0     14006 GLASTONBURY        NEWBERRY, TARSHISH        0   \n",
+      "1     19951 ASBURY PARK              REAL TC LLC         1   \n",
+      "2     16881 ASBURY PARK  MCQUEEN, WILLIE & BESSIE        2   \n",
+      "3         10322 TIREMAN                H.I.G. LLC        3   \n",
+      "4          4158 LINCOLN                CRUSE, ZAC        4   \n",
+      "...                 ...                       ...      ...   \n",
+      "996           8098 WARD             JALLOW, LAMIN      996   \n",
+      "997      19189 RIOPELLE  HARDEMAN, JULIAN JEROME       997   \n",
+      "998      9224 PLAINVIEW             COWART, DIANA      998   \n",
+      "999       19656 PACKARD           CRAIG , DELBERT      999   \n",
+      "1000      18901 INDIANA           GOTTLIEB, YAFFA     1000   \n",
+      "\n",
+      "                    placekey  \n",
+      "0     1rmb5xqyg7@63v-4jp-grk  \n",
+      "1     1ooce754zh@63v-456-h89  \n",
+      "2     1jyfegl7jg@63v-458-gx5  \n",
+      "3     1hfq2t7db2@63v-4jh-8sq  \n",
+      "4     1mf7qbfxxm@63v-48v-33q  \n",
+      "...                      ...  \n",
+      "996   1r3q7vrokn@63v-4gb-fmk  \n",
+      "997   1gypflexpz@63v-44h-dy9  \n",
+      "998   17shtzwaah@63v-4gc-mkz  \n",
+      "999   1vxvzspeao@63v-4b4-r8v  \n",
+      "1000  1m66rc6xye@63v-455-n89  \n",
+      "\n",
+      "[1001 rows x 9 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Simulate just a WHERE key\n",
+    "blight_pk_merged['where_pk_7'] = blight_pk_merged['placekey'].str[-12:-2]\n",
+    "property_pk_merged['where_pk_7'] = property_pk_merged['placekey'].str[-12:-2]\n",
+    "\n",
+    "# Aggregate number of violations per placekey\n",
+    "blight_pk_agg = blight_pk_merged.groupby('where_pk_7').agg(\n",
+    "    { 'query_id' : 'count' }).reset_index().rename({'query_id' : 'violations_within_1100_meters'}, axis=1)\n",
     "\n",
     "# Finally, lets outer join these two data frames to really harness the power of placekey\n",
-    "joined_blight_property_df = blight_pk_merged.merge(property_pk_merged, how='inner', on='placekey')\n",
+    "joined_blight_property_df = blight_pk_agg.merge(property_pk_merged, how='right', on='where_pk_7')\n",
+    "\n",
+    "print(joined_blight_property_df)\n",
     "\n",
     "# Runtime is great when joining on placekey!\n",
     "joined_blight_property_df.to_csv('joined.csv', sep='\\t')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d789660-348d-4588-9bb7-020355b8e43d",
+   "metadata": {},
+   "source": [
+    "### We can now see the number of violations within 1100 meters (due to the length of the shared prefix) per property in Detroit"
    ]
   },
   {
@@ -372,7 +474,6 @@
    "metadata": {},
    "source": [
     "## Conclusion\n",
-    "\n",
     "<strong><em>While calling Placekey's API with 1M+ records can be time consuming (understandable), the speed of joining datasets with a placekey seems to be worth it! Pretty cool experiment! When looking at the joined dataset, we can see that addresses with similar/same longitude and latitude (but different addresses) have identical placekeys! Really interesting!\n",
     "</em></strong>"
    ]
@@ -380,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3745b388-0dad-40a4-8e50-74e12907b27b",
+   "id": "29b0ab53-7cce-4856-8133-8d5ef7f5838e",
    "metadata": {},
    "outputs": [],
    "source": []
