update per request

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 2,
    "id": "e99a7e11-41b0-4df0-82c6-6532548be2a5",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 3,
    "id": "393a76c2-655d-499f-a2f6-b012db6d1209",
    "metadata": {},
    "outputs": [
@@ -68,14 +68,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 4,
    "id": "2b21abd9-403b-4f2b-95cc-c92807fc341b",
    "metadata": {},
    "outputs": [],
    "source": [
     "# For posterity and a possible performance improvement when reading csv\n",
     "blight_column_dtype = { 'X': float, 'Y': float, 'violation_address': str }\n",
-    "property_column_dtype = { 'X': float, 'Y': float, 'address': str, 'grantee': str }\n",
+    "property_column_dtype = { 'X': float, 'Y': float, 'address': str }\n",
     "\n",
     "# Read both datasets into dataframes\n",
     "blight_violations_df = pd.read_csv('./data/Blight_Violations.csv', low_memory=False, dtype=blight_column_dtype)\n",
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 5,
    "id": "8210b22b-f5f0-4b82-ae3c-7b8acdf3f8a3",
    "metadata": {},
    "outputs": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 6,
    "id": "bb85d6dc-597d-4dcb-bad0-303074cc2a64",
    "metadata": {},
    "outputs": [
@@ -221,12 +221,12 @@
       "2 -83.115057  42.359928     4066 COLUMBUS\n",
       "3 -83.128037  42.393455     3005 PASADENA\n",
       "4 -83.134466  42.389668     4024 CLEMENTS\n",
-      "           X          Y            address                   grantee\n",
-      "0 -83.224446  42.388139  14006 GLASTONBURY        NEWBERRY, TARSHISH\n",
-      "1 -83.210323  42.438587  19951 ASBURY PARK              REAL TC LLC \n",
-      "2 -83.209319  42.415134  16881 ASBURY PARK  MCQUEEN, WILLIE & BESSIE\n",
-      "3 -83.161543  42.351916      10322 TIREMAN                H.I.G. LLC\n",
-      "4 -83.074014  42.346942       4158 LINCOLN                CRUSE, ZAC\n"
+      "           X          Y            address\n",
+      "0 -83.224446  42.388139  14006 GLASTONBURY\n",
+      "1 -83.210323  42.438587  19951 ASBURY PARK\n",
+      "2 -83.209319  42.415134  16881 ASBURY PARK\n",
+      "3 -83.161543  42.351916      10322 TIREMAN\n",
+      "4 -83.074014  42.346942       4158 LINCOLN\n"
      ]
     }
    ],
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 7,
    "id": "36fb7994-b3b0-40ad-a528-d6c638781f86",
    "metadata": {},
    "outputs": [],
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 8,
    "id": "9500ae22-4da8-4ab5-a73a-66d331dfd74c",
    "metadata": {},
    "outputs": [
@@ -285,12 +285,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-02-09 18:15:44,492\tINFO\tProcessed 1000 items\n",
-      "2024-02-09 18:15:45,003\tINFO\tProcessed 1001 items\n",
-      "2024-02-09 18:15:45,004\tINFO\tDone\n",
-      "2024-02-09 18:16:15,141\tINFO\tProcessed 1000 items\n",
-      "2024-02-09 18:16:15,538\tINFO\tProcessed 1001 items\n",
-      "2024-02-09 18:16:15,539\tINFO\tDone\n"
+      "2024-02-10 12:43:01,258\tINFO\tProcessed 1000 items\n",
+      "2024-02-10 12:43:01,813\tINFO\tProcessed 1001 items\n",
+      "2024-02-10 12:43:01,814\tINFO\tDone\n",
+      "2024-02-10 12:43:32,492\tINFO\tProcessed 1000 items\n",
+      "2024-02-10 12:43:32,887\tINFO\tProcessed 1001 items\n",
+      "2024-02-10 12:43:32,888\tINFO\tDone\n"
      ]
     },
     {
@@ -325,7 +325,7 @@
     "blight_violations_json = df_to_api_query(df=blight_violations_df, \\\n",
     "                                         column_map={'index': 'query_id', 'violation_address': 'street_address', 'X': 'longitude', 'Y': 'latitude'})\n",
     "property_sales_json = df_to_api_query(df=property_sales_df, \\\n",
-    "                                      column_map={'index': 'query_id', 'address': 'street_address', 'X': 'longitude', 'Y': 'latitude', 'grantee': 'location_name'})\n",
+    "                                      column_map={'index': 'query_id', 'address': 'street_address', 'X': 'longitude', 'Y': 'latitude' })\n",
     "\n",
     "# Let's check our work\n",
     "print(blight_violations_df.head())\n",
@@ -356,21 +356,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": null,
    "id": "b5e67a1c-83ea-4782-90d3-1d4b35fdf1d5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/02/g7r1b8rd479dg621r14hxq400000gn/T/ipykernel_34016/365233284.py:2: FutureWarning: Passing literal json to 'read_json' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
-      "  blight_pk_df = pd.read_json(json.dumps(blight_response), dtype={'query_id': str})\n",
-      "/var/folders/02/g7r1b8rd479dg621r14hxq400000gn/T/ipykernel_34016/365233284.py:3: FutureWarning: Passing literal json to 'read_json' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
-      "  property_pk_df = pd.read_json(json.dumps(property_response), dtype={'query_id': str})\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Now we can convert the API response to a dataframe\n",
     "blight_pk_df = pd.read_json(json.dumps(blight_response), dtype={'query_id': str})\n",
@@ -391,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 35,
    "id": "b9f11018-6cba-4ea7-9d87-61ff2eb2974b",
    "metadata": {},
    "outputs": [
@@ -399,51 +388,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "      where_pk_7  violations_within_1100_meters index          X          Y  \\\n",
-      "0     @63v-4jp-g                            NaN     0 -83.224446  42.388139   \n",
-      "1     @63v-456-h                            NaN     1 -83.210323  42.438587   \n",
-      "2     @63v-458-g                            3.0     2 -83.209319  42.415134   \n",
-      "3     @63v-4jh-8                            NaN     3 -83.161543  42.351916   \n",
-      "4     @63v-48v-3                            1.0     4 -83.074014  42.346942   \n",
-      "...          ...                            ...   ...        ...        ...   \n",
-      "996   @63v-4gb-f                            NaN   996        NaN        NaN   \n",
-      "997   @63v-44h-d                            NaN   997 -83.086941  42.434075   \n",
-      "998   @63v-4gc-m                            1.0   998 -83.234435  42.361752   \n",
-      "999   @63v-4b4-r                            NaN   999 -83.027276  42.439680   \n",
-      "1000  @63v-455-n                            1.0  1000 -83.159045  42.429704   \n",
+      "    index          X          Y                   address query_id  \\\n",
+      "0       2 -83.209319  42.415134         16881 ASBURY PARK        2   \n",
+      "1       4 -83.074014  42.346942              4158 LINCOLN        4   \n",
+      "2       5 -83.093178  42.390215            724 BURLINGAME        5   \n",
+      "3       8 -83.218099  42.416632             17167 FENMORE        8   \n",
+      "4      16 -83.215977  42.416556              17161 HARLOW       16   \n",
+      "..    ...        ...        ...                       ...      ...   \n",
+      "425   986 -83.010869  42.431333             18645 ALGONAC      986   \n",
+      "426   990 -83.006921  42.345242  6533 E JEFFERSON 94/305J      990   \n",
+      "427   993 -83.113946  42.354402             6733 HARTFORD      993   \n",
+      "428   998 -83.234435  42.361752            9224 PLAINVIEW      998   \n",
+      "429  1000 -83.159045  42.429704             18901 INDIANA     1000   \n",
       "\n",
-      "                address                   grantee query_id  \\\n",
-      "0     14006 GLASTONBURY        NEWBERRY, TARSHISH        0   \n",
-      "1     19951 ASBURY PARK              REAL TC LLC         1   \n",
-      "2     16881 ASBURY PARK  MCQUEEN, WILLIE & BESSIE        2   \n",
-      "3         10322 TIREMAN                H.I.G. LLC        3   \n",
-      "4          4158 LINCOLN                CRUSE, ZAC        4   \n",
-      "...                 ...                       ...      ...   \n",
-      "996           8098 WARD             JALLOW, LAMIN      996   \n",
-      "997      19189 RIOPELLE  HARDEMAN, JULIAN JEROME       997   \n",
-      "998      9224 PLAINVIEW             COWART, DIANA      998   \n",
-      "999       19656 PACKARD           CRAIG , DELBERT      999   \n",
-      "1000      18901 INDIANA           GOTTLIEB, YAFFA     1000   \n",
+      "                   placekey  where_pk_7  violations_within_1100_meters  \n",
+      "0           23d@63v-458-gx5  @63v-458-g                              3  \n",
+      "1           234@63v-48v-33q  @63v-48v-3                              1  \n",
+      "2    0mq2cw56br@63v-44v-59f  @63v-44v-5                            154  \n",
+      "3           22m@63v-4jt-s89  @63v-4jt-s                              1  \n",
+      "4           22f@63v-4jt-qs5  @63v-4jt-q                              1  \n",
+      "..                      ...         ...                            ...  \n",
+      "425         236@63v-49y-yvz  @63v-49y-y                              2  \n",
+      "426         225@63v-47c-ks5  @63v-47c-k                              1  \n",
+      "427  0ktl5ei2zi@63v-44v-59f  @63v-44v-5                            154  \n",
+      "428         22k@63v-4gc-mkz  @63v-4gc-m                              1  \n",
+      "429         22r@63v-455-n89  @63v-455-n                              1  \n",
       "\n",
-      "                    placekey  \n",
-      "0     1rmb5xqyg7@63v-4jp-grk  \n",
-      "1     1ooce754zh@63v-456-h89  \n",
-      "2     1jyfegl7jg@63v-458-gx5  \n",
-      "3     1hfq2t7db2@63v-4jh-8sq  \n",
-      "4     1mf7qbfxxm@63v-48v-33q  \n",
-      "...                      ...  \n",
-      "996   1r3q7vrokn@63v-4gb-fmk  \n",
-      "997   1gypflexpz@63v-44h-dy9  \n",
-      "998   17shtzwaah@63v-4gc-mkz  \n",
-      "999   1vxvzspeao@63v-4b4-r8v  \n",
-      "1000  1m66rc6xye@63v-455-n89  \n",
-      "\n",
-      "[1001 rows x 9 columns]\n"
+      "[430 rows x 8 columns]\n"
      ]
     }
    ],
    "source": [
-    "# Simulate just a WHERE key\n",
+    "# Simulate just a WHERE (within 1100m) key\n",
     "blight_pk_merged['where_pk_7'] = blight_pk_merged['placekey'].str[-12:-2]\n",
     "property_pk_merged['where_pk_7'] = property_pk_merged['placekey'].str[-12:-2]\n",
     "\n",
@@ -452,7 +428,7 @@
     "    { 'query_id' : 'count' }).reset_index().rename({'query_id' : 'violations_within_1100_meters'}, axis=1)\n",
     "\n",
     "# Finally, lets outer join these two data frames to really harness the power of placekey\n",
-    "joined_blight_property_df = blight_pk_agg.merge(property_pk_merged, how='right', on='where_pk_7')\n",
+    "joined_blight_property_df = property_pk_merged.merge(blight_pk_agg, how='inner', on='where_pk_7')\n",
     "\n",
     "print(joined_blight_property_df)\n",
     "\n",
